adds in the actual images and links and names

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -87,6 +87,8 @@ img { max-width: 100%; }
   h3{ font-size: 24pt; }
   h4 { font-size: 16pt; }
  .index-padding { padding: 3% 10% !important; } 
+  .index-padding-so { padding: 0 10% !important; } 
+
   #close-cart { margin-top: 37px;}
   #go-to-cart { top: 59px;}
 
@@ -133,6 +135,8 @@ img { max-width: 100%; }
   h3{ font-size: 16pt; } 
   h4 { font-size: 12pt; }
   .index-padding { padding: 2.5% 5% !important; } 
+    .index-padding-so { padding: 0 5% !important; } 
+
   #faq .page-header {  height: 300px; }
   p, table { font-size: 10pt; } 
   footer { padding: 50px; }
@@ -193,6 +197,7 @@ img { max-width: 100%; }
     background-image: url("{{'flow-paca.png' | asset_url}}"); 
     background-position: bottom right;
   }
+  
   #cart-order-summary { margin-top: 60px;}
   #close-cart { margin-top: 14px;}
   p, table { font-size: 10pt; } 
@@ -202,6 +207,8 @@ img { max-width: 100%; }
   .double-padding-tbo { padding: 20px 0 ; }
   .prog-bar { margin-top: -25px; }
   .index-padding { padding: 20px 5% !important; }
+  .index-padding-so { padding: 0 5% !important; }
+
   .cart-page h3 {text-align: center;}
   .cart-page .two-thirds { width: 100%; }
   .cart-page .third {width: 100%;}
@@ -1185,18 +1192,12 @@ table .lg { background-color: #d1cdcd; }
   vertical-align: middle;
 }
 .feed-column div img { display: block; margin: 0 auto; }
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 799px) {
   .feed-column {
     flex: 50%;
     max-width: 50%;
   }
 }
-@media screen and (max-width: 600px) {
-  .feed-column {
-    flex: 100%;
-    max-width: 100%;
-  }
-}
-
+#live-feed h4 { padding-top: 20px; }
 
 
