adds square versions of live stream photos, add live stream to home page and product pages

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -473,7 +473,7 @@ footer form {
 .button {
     padding: 10px;
     cursor: pointer;
-    border: 2px solid gray;
+    border: 1px solid gray;
     border-radius: 100px;
 }
 #give-the-gift p.nmt { max-width: 560px; margin: 0 auto; }
@@ -1199,5 +1199,21 @@ table .lg { background-color: #d1cdcd; }
   }
 }
 #live-feed h4 { padding-top: 20px; }
+#live-feed-snippet{
+    width: 100%;
+    overflow: scroll;
+    white-space: nowrap;
+    -webkit-overflow-scrolling: touch;
+    display: inline-block;
+    vertical-align: middle;
+    margin: 0 5px;
+    -ms-overflow-style: none;
+}
+#live-feed-snippet div {
+    display: inline-block;
+    margin: 1%;
+    width: 200px;
+}
+
 
 
