--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -229,7 +229,7 @@
  <section class="page-header tac">
   <h3 class="nmb">Check out our Live Feed</h3>
   <h3 class="accent nmt">#alpacas</h3>
-  <img src="{{'life-feed-preview.png' | asset_url}}" />
+  {% include 'live-feed' %}
 </section>
 <script>
   var swipeRight = function() {
