styles mobile live snippet

--- a/snippets/live-feed.liquid
+++ b/snippets/live-feed.liquid
@@ -3,7 +3,7 @@
   <h3 class="nm">Check out our Live Feed</h3>
   <h3 class="accent nmt">#alpacas</h3>
   <section id="live-feed-snippet" class="fw">
-    <p class="left-arrow large clickable">⌃</p>
+    <p class="left-arrow large clickable do">⌃</p>
     <div>
       <a href="https://www.instagram.com/p/BtbYUten7Qc/" target="_blank">
         <img src="{{'@1870farm1.png' | asset_url}}" />
@@ -247,7 +247,7 @@
           <p class="tac subscript">@wallflourbysydney</p>
         </a>
       </div>
-      <p class="right-arrow large clickable">⌃</p>
+      <p class="right-arrow large clickable do">⌃</p>
   </section>
 </section>
 
