--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -226,6 +226,7 @@ img { max-width: 100%; }
 }
 @media only screen and (min-width: 589px) {
   .accent-padding { padding: 20px; }
+  .accent-padding-to { padding-top: 20px; }
   .accent-padding-tb { padding: 20px 0;}
   .half { width: 50%; box-sizing: border-box; }
   footer section {  margin: auto 20px;}
@@ -335,7 +336,7 @@ img { max-width: 100%; }
 h1,h2,h3,h4,h5,a, span, input, th, select { font-family: 'Quicksand', sans-serif; }
 p, textarea, td, ul, li, .error_message, .success_message { font-family: 'Quicksand', sans-serif; } 
 /*header*/
-.fixed-nav {
+.fixed-nav, .fixed-nav-collections {
   position: fixed !important;
   top: 0;
   width: 100%;
@@ -344,7 +345,19 @@ p, textarea, td, ul, li, .error_message, .success_message { font-family: 'Quicks
     margin-top: -1px;
     box-shadow: 0px 2px 5px 0px rgba(0,0,0,.2);
 }
-
+#dnav, .desktop-collections  {
+  -moz-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  -ms-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+#dnav p { padding: 10px; }
+.desktop-type-wrapper { 
+  width: 150px; 
+  padding: 10px;
+  margin: 10px;
+}
+.desktop-type-wrapper img { width: 100px; }
 #hamburger {
   display: inline-block !important; 
   -webkit-transform: rotate(0deg);
@@ -878,6 +891,7 @@ body section #shaver.rotate { transform: rotate(-10deg); }
     border: 1px solid #d1cdcd;
     border-radius: 5%;
 }
+.border-bottom-darkgray { border-bottom: 2px solid #7b8284; border-width: 110%; }
 .border-bottom-gray { border-bottom: 1px solid  #d1cdcd;}
 #c110002667620 .page-header {
   background-color: #fdf3ed;
@@ -1202,7 +1216,7 @@ table .lg { background-color: #d1cdcd; }
   }
 }
 #live-feed h4 { padding-top: 20px; }
-#live-feed-snippet{
+#live-feed- snippet{
     width: 100%;
     overflow: scroll;
     white-space: nowrap;
