shows / hides collection objects based on nav hover

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -240,7 +240,8 @@ img { max-width: 100%; }
   .cart-update { margin-bottom: 20px; }
   .price-details { padding: 20px 0 20px 20px ; }
   #cart-update-wrapper { margin-top: -20px;}
-  .upper-pad {padding-top: 94.55px;}
+  .upper-pad {padding-top: 102.66px;}
+  .upper-pad-collections { padding-top: 331px; }
   .jlogo { width: 130px; }
   #hamburger {
     display: inline-block !important; 
@@ -345,13 +346,8 @@ p, textarea, td, ul, li, .error_message, .success_message { font-family: 'Quicks
     margin-top: -1px;
     box-shadow: 0px 2px 5px 0px rgba(0,0,0,.2);
 }
-#dnav, .desktop-collections  {
-  -moz-transition: all 0.2s ease;
-  -o-transition: all 0.2s ease;
-  -ms-transition: all 0.2s ease;
-  transition: all 0.2s ease;
-}
-#dnav p { padding: 10px; }
+
+#dnav p { padding: 10px; box-sizing: border-box;}
 .desktop-type-wrapper { 
   width: 150px; 
   padding: 10px;
@@ -422,7 +418,7 @@ p, textarea, td, ul, li, .error_message, .success_message { font-family: 'Quicks
 }
 .cart-icon { width: 30px;}
 nav .jes { width: calc(50% - 65px); }
-nav { padding: 20px; box-sizing: border-box;   transition: 0.5s ease-out;} 
+nav { padding: 20px; box-sizing: border-box;} 
 /* footer */
 footer ul { list-style: none; padding-left: 0; line-height: 1.75; }
 .email {
@@ -891,7 +887,7 @@ body section #shaver.rotate { transform: rotate(-10deg); }
     border: 1px solid #d1cdcd;
     border-radius: 5%;
 }
-.border-bottom-darkgray { border-bottom: 2px solid #7b8284; border-width: 110%; }
+.border-bottom-darkgray { border-bottom: 2px solid #7b8284; }
 .border-bottom-gray { border-bottom: 1px solid  #d1cdcd;}
 #c110002667620 .page-header {
   background-color: #fdf3ed;
@@ -1216,7 +1212,7 @@ table .lg { background-color: #d1cdcd; }
   }
 }
 #live-feed h4 { padding-top: 20px; }
-#live-feed- snippet{
+#live-feed-snippet{
     width: 100%;
     overflow: scroll;
     white-space: nowrap;
