--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -1,3 +1,10 @@
+<style>
+nav {
+  box-shadow: 0px 2px 5px 0px rgba(0,0,0,.2);
+  background: white;
+}
+</style>  
+
 <main id="product" itemscope itemtype="http://schema.org/Product">
   <meta itemprop="name" content="{{ product.title }}">
   <meta itemprop="url" content="{{ shop.url }}{{ product.url }}">
