adds reviews link to footer and adds the iframe to the template

--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -26,7 +26,8 @@
       <a href="/collections/mens"><li class="text-white">Men</li></a>
       <a href="/collections/womens"><li class="text-white">Women</li></a>
       <a href="/collections/kids"><li class="text-white">Kids</li></a>
-      <a href="/page/giving"><li class="text-white">Giving</li></a>
+      <a href="/pages/reviews"><li class="text-white">Reviews
+      </li></a>
       <a href="/pages/contact-us"><li class="text-white">Contact Us</li></a>
     </ul>
   </section>
