--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -883,10 +883,15 @@ body section #shaver.rotate { transform: rotate(-10deg); }
 }
 /*collections*/
 .product-collection {
-    margin: 10px;
+    margin-right: 20px;
     border: 1px solid #d1cdcd;
     border-radius: 5%;
+    width: 20%;
+    box-sizing: border-box;
 }
+.collection .quarter { max-width: 200px; }
+.collection .three-fourths { padding: 50px 20px; }
+.collection .three-fourths .flex-container { flex-wrap: wrap; padding-bottom: 50px; }
 .border-bottom-darkgray { border-bottom: 2px solid #7b8284; }
 .border-bottom-gray { border-bottom: 1px solid  #d1cdcd;}
 #c110002667620 .page-header {
