styles collections pages

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -883,7 +883,7 @@ body section #shaver.rotate { transform: rotate(-10deg); }
 }
 /*collections*/
 .product-collection {
-    margin-right: 20px;
+    margin: 0 20px 20px 0;
     border: 1px solid #d1cdcd;
     border-radius: 5%;
     width: 20%;
@@ -919,7 +919,6 @@ body section #shaver.rotate { transform: rotate(-10deg); }
 #collection-wrapper { align-items: flex-start }
 /*.text-lightgray { color:  #d1cdcd; }
 */.strike-through { text-decoration: line-through; }
-
 /*cart page*/
 .cart-page .line-item-details input {
   border: 2px solid #F9F7F7;
