adds links to desktop nav

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -27,7 +27,7 @@
   </div> 
   <div class="mens desktop-collections" style="display: none;">
     <div class="flex-container-no jcc accent-padding-to">
-        <a href="/collections/mens-atheltic">
+        <a href="/collections/mens-athletic">
           <div class="background-blue tac desktop-type-wrapper">
             <p>Athletic</p>
             <img src="{{'bombas_socksample.png' | asset_url}}"/>
@@ -39,7 +39,7 @@
               <img src="{{'bombas_socksample.png' | asset_url}}" />
           </div>
         </a>
-        <a href="/collections/mens-casual">
+        <a href="/collections/mens-dress">
          <div class="background-blue tac desktop-type-wrapper">
               <p>Dress</p>
               <img src="{{'bombas_socksample.png' | asset_url}}"/>
@@ -49,26 +49,34 @@
   </div> 
   <div class="kids desktop-collections" style="display: none;">
     <div class="flex-container-no jcc accent-padding-to">
+      <a href="/collections/kids-athletic">
         <div class="background-blue tac desktop-type-wrapper">
           <p>Athletic</p>
           <img src="{{'bombas_socksample.png' | asset_url}}"/>
         </div>
+      </a>
+      <a href="/collections/kids-casual">
         <div class="background-blue tac desktop-type-wrapper">
           <p>Casual</p>
           <img src="{{'bombas_socksample.png' | asset_url}}" />
         </div>
+      </a>
       </div>
   </div> 
   <div class="womens desktop-collections" style="display: none;">
     <div class="flex-container-no jcc accent-padding-to">
+      <a href="/collections/womens-athletic">
         <div class="background-blue tac desktop-type-wrapper">
           <p>Athletic</p>
           <img src="{{'bombas_socksample.png' | asset_url}}"/>
         </div>
+      </a>
+      <a href="womens-casual">
         <div class="background-blue tac desktop-type-wrapper">
           <p>Casual</p>
           <img src="{{'bombas_socksample.png' | asset_url}}" />
         </div>
+      </a>
       </div>
   </div> 
  </nav> 
@@ -91,22 +99,18 @@
     <h4 class="tac collection-prod clickable"> Women's <span class="fr">></span></h4>
     <div class="childlink" style="display: none;">
       <div class="flex-container-no jcc">
-        <div class="half-no background-blue accent-padding drawer-collection-wrapper tac">
-          <p>Athletic</p>
-          <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
-        </div>
-        <div class="half-no background-blue accent-padding drawer-collection-wrapper tac">
-          <p>Casual</p>
-          <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
-        </div>
-      </div>
-      <div class="flex-container-no jcc">
-        <div class="half-no background-blue accent-padding drawer-collection-wrapper tac">
-          <p>Dress</p>
-          <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
-        </div>
-        <div class="half-no drawer-collection-wrapper ">
-        </div>
+        <a href="/collections/womens-athletic">
+          <div class="half-no background-blue accent-padding drawer-collection-wrapper tac">
+            <p>Athletic</p>
+            <img src="{{'bombas_socksample.png' | asset_url}}" class="fw"/>
+          </div>
+        </a>
+        <a href="womens-casual">
+          <div class="half-no background-blue accent-padding drawer-collection-wrapper tac">
+            <p>Casual</p>
+            <img src="{{'bombas_socksample.png' | asset_url}}" class=" fw"/>
+          </div>
+        </a>
       </div>
     </div>
   </div>
