adds a margin on the larger desktop sizes for the product benefits as they were started to blend together with so much room

--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -195,7 +195,7 @@ nav {
     <div class="third do">
     </div>
     <div class="two-thirds do">
-      <div class="flex-container">
+      <div class="flex-container product-benefits-wrapper">
         <div class="tac half">
           <img src="{{'crown.png' | asset_url}}" class="icon" />
           <h4>Soft as Cashmere</h4>
@@ -206,20 +206,20 @@ nav {
           <h4>Warmer than Wool</h4>
           <p>Alpaca fibers are<br> completely hollow, which<br> enable them to trap  more<br> heat than sheep wool.</p>
         </div>
-      </div>
-      <div class="flex-container">
+      </div>  
+      <div class="flex-container product-benefits-wrapper">
         <div class="tac half">
           <img src="{{'water.png' | asset_url}}" class="icon" />
           <h4>Thermoregulating & Waterproof</h4>
           <p>Alpaca fibers have a hollow<br>core, allowing their fleece<br> to provide insulation and<br> wick moisture.</p>
         </div>
-        <div class="tac half">
+        <div class="tac half product-benefits-wrapper">
           <img src="{{'poof.png' | asset_url}}" class="icon" />
           <h4>Non-itchy & Hypoallergenic</h4>
           <p>Alpaca fleece is naturally<br> smooth and short, with<br>no grease, providing the<br> ultimate comfort.</p>
         </div>
       </div>
-        <div class="flex-container">
+        <div class="flex-container product-benefits-wrapper">
         <div class="tac half">
           <img src="{{'leaf.png' | asset_url}}" class="icon" />
           <h4>Eco-friendly & Sustainable</h4>
