--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -81,7 +81,7 @@ html { padding-bottom: 0 !important; }
 img { max-width: 100%; }
 @media only screen and (min-width: 1600px) {
   #our-story .page-header {min-height: 650px;}
-}
+} 
 @media only screen and (min-width: 1100px) {
   h1 { font-size: 67pt; } 
   h2 { font-size: 34pt; } 
@@ -89,7 +89,7 @@ img { max-width: 100%; }
   h4 { font-size: 16pt; }
  .index-padding { padding: 3% 10% !important; } 
   .index-padding-so { padding: 0 10% !important; } 
-
+  .product-benefits-wrapper { margin: 40px 0; }
   #close-cart { margin-top: 37px;}
   #go-to-cart { top: 59px;}
 
