switches the way I was accessing the css for the swatches to be more robust

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -635,7 +635,7 @@ body section #shaver.rotate { transform: rotate(-10deg); }
 #product .additional-label {
     color: #d1cdcd ;
 }
-#product [data-option-index='1'] {
+#product .flex-container-no .swatch {
     border: 1px solid #d1cdcd;
     border-radius: 80px;
     width: 60%;
