--- a/templates/customers/login.liquid
+++ b/templates/customers/login.liquid
@@ -5,17 +5,15 @@
     </script>
   {% else %}
   <div class="login">     
-    <section class="tac fw page-header">
-      <h2 class="text-green nmb">Log In to Your Account</h2>
-      <h3 class="nmt"> Don't have an account? <a href="/account/register" class="text-green">Sign up here</a></h3>
+    <section class="tac fw">
+      <h3 class="nmb">Log In to Your Account</h2>
+      <p class="tac nmt"> Don't have an account? <a href="/account/register" class="border-bottom-gray" >Sign up here</a></p>
     </section>    
-    <section>
+    <section class="accent-padding">
       {% form 'customer_login' %}
         {{ form.errors | default_errors }}
-        <h3 class="text-green"><label for="customer_email">Email Address</label></h3>
-        <input type="email" value="" name="customer[email]" class="background-lightgray"><br>
-        <h3 class="text-green"><label for="customer_password">Password</label></h3>
-        <input type="password" value="" name="customer[password]" size="16" class="background-lightgray"><br>
+        <input type="email" value="" name="customer[email]" class="" placeholder="Email"><br>
+        <input type="password" value="" name="customer[password]" size="16" class="" placeholder="Password"><br>
         <input type="submit" value="Sign In">
         <p class="forgot-password tac"><a href="#recover" onclick="showRecoverPasswordForm()">Forgot your password?</a></p>
       {% endform %}
@@ -23,14 +21,14 @@
   </div>
   <div class="recover-password">
     <section class="tac fw page-header">
-      <h2 class="text-green nmb">Reset Password</h2>
+      <h2 class="nmb">Reset Password</h2>
       <h3 class="nmt">We will send you an email to reset your password</h3>
     </section>    
     <section>
       {% form 'recover_customer_password' %}
         {{ form.errors | default_errors }}
         <h3 class="text-green"><label for="email">Email Address</label></h3>
-        <input type="email" value="" size="30" name="email" class="background-lightgray"> 
+        <input type="email" value="" size="30" name="email" class=""> 
         <input type="submit" value="Submit">
         <p class="forgot-password tac"> <span>back to <a href="javascript:void(0)" onclick="hideRecoverPasswordForm()">login</a></span></p>
       {% endform %}
