adds and styles the account signup paca

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -1244,28 +1244,32 @@ table .lg { background-color: #d1cdcd; }
 }
 /* customer account */
 .customer form input[type=email], .customer form input[type=password]{
-    width: 100%;
-    line-height: 2;
-    padding: 10px;
-    border-radius: 80px;
-    border: 1px solid #d1cdcd;
-    background-color: white;
-    margin-bottom: 15px;
-    font-size: 10pt;
-    box-sizing: border-box;
+  width: 100%;
+  line-height: 2;
+  padding: 10px;
+  border-radius: 80px;
+  border: 1px solid #d1cdcd;
+  background-color: white;
+  margin-bottom: 15px;
+  font-size: 10pt;
+  box-sizing: border-box;
 }
 .customer form input[type=submit] {
-    width: 100%;
-    border-radius: 80px;
-    line-height: 2;
-    font-size: 10pt;
-    padding: 10px;
-    border: 1px solid #7b8284;
-    background: #7b8284;
-    color: white;
+  width: 100%;
+  border-radius: 80px;
+  line-height: 2;
+  font-size: 10pt;
+  padding: 10px;
+  border: 1px solid #7b8284;
+  background: #7b8284;
+  color: white;
 }
 .customer form {
-    max-width: 500px;
-    margin: 0 auto;
+  max-width: 500px;
+  margin: 0 auto;
 }
-
+.account-paca { 
+  display: block;
+  margin: 0 auto;
+  width: 300px;
+ }
