--- a/templates/customers/login.liquid
+++ b/templates/customers/login.liquid
@@ -35,6 +35,7 @@
     </section>
   </div>
   {% endif %}
+  <img src="{{'account-paca.png' | asset_url}}" class="account-paca"/>
 </main>
 
 <script type="text/javascript">
