adds shadow on header and gives the top some padding

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -166,14 +166,14 @@ img { max-width: 100%; }
     padding: 0 50px;
     justify-content: center;
   }
+  .customer { padding-top: 50px; }
   #cart-order-summary {margin-left: 60px;}
   table td, table th { padding: 15px; }
   .product-benefits .two-thirds  {
     margin: 50px;
-}
+  }
   .collection .page-header { height: 400px; }
-#faq .faq .flex-container-no { align-items: flex-start; }
-
+  #faq .faq .flex-container-no { align-items: flex-start; }
   .prog-bar { margin-bottom: 50px; }
   .half-do { width: 50%; }
   .double-padding { padding: 50px; }
@@ -198,7 +198,6 @@ img { max-width: 100%; }
     background-image: url("{{'flow-paca.png' | asset_url}}"); 
     background-position: bottom right;
   }
-  
   #cart-order-summary { margin-top: 60px;}
   #close-cart { margin-top: 14px;}
   p, table { font-size: 10pt; } 
@@ -209,7 +208,7 @@ img { max-width: 100%; }
   .prog-bar { margin-top: -25px; }
   .index-padding { padding: 20px 5% !important; }
   .index-padding-so { padding: 0 5% !important; }
-
+  .customer { padding-top: 20px; }
   .cart-page h3 {text-align: center;}
   .cart-page .two-thirds { width: 100%; }
   .cart-page .third {width: 100%;}
