--- a/templates/customers/login.liquid
+++ b/templates/customers/login.liquid
@@ -1,3 +1,10 @@
+<style>
+  nav {
+    box-shadow: 0px 2px 5px 0px rgba(0,0,0,.2);
+    background: white;
+  }
+</style> 
+
 <main id="login" class="customer"> 
   {% if customer %}
     <script type="text/javascript">
