adds in icon, adjusts height accordingly

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -166,7 +166,6 @@ img { max-width: 100%; }
     padding: 0 50px;
     justify-content: center;
   }
-  .customer { padding-top: 50px; }
   #cart-order-summary {margin-left: 60px;}
   table td, table th { padding: 15px; }
   .product-benefits .two-thirds  {
@@ -208,7 +207,6 @@ img { max-width: 100%; }
   .prog-bar { margin-top: -25px; }
   .index-padding { padding: 20px 5% !important; }
   .index-padding-so { padding: 0 5% !important; }
-  .customer { padding-top: 20px; }
   .cart-page h3 {text-align: center;}
   .cart-page .two-thirds { width: 100%; }
   .cart-page .third {width: 100%;}
@@ -1271,4 +1269,11 @@ table .lg { background-color: #d1cdcd; }
   display: block;
   margin: 0 auto;
   width: 300px;
- }
+}
+.account-icon {
+  width: 30px;
+  vertical-align: middle;
+  margin-bottom: 5px;
+}
+.customer { padding-top: 50px; }
+
