--- a/templates/customers/login.liquid
+++ b/templates/customers/login.liquid
@@ -13,8 +13,8 @@
   {% else %}
   <div class="login">     
     <section class="tac fw">
-      <h3 class="nmb">Log In to Your Account</h2>
-      <p class="tac nmt"> Don't have an account? <a href="/account/register" class="border-bottom-gray" >Sign up here</a></p>
+      <h3 class="">Log In to Your Account</h2>
+      <p class="tac nmt"><img src="{{'paca-icon.png' | asset_url}}" class="account-icon"/> Don't have an account? <a href="/account/register" class="border-bottom-gray" >Sign up here</a></p>
     </section>    
     <section class="accent-padding">
       {% form 'customer_login' %}
