adjusts forms and adds new elements to the create account page to mimic the style of the login in page

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -1240,7 +1240,7 @@ table .lg { background-color: #d1cdcd; }
     margin-top: -150px;
 }
 /* customer account */
-.customer form input[type=email], .customer form input[type=password]{
+.customer form input[type=email], .customer form input[type=password], .customer form input[type=text]{
   width: 100%;
   line-height: 2;
   padding: 10px;
