fixes a padding issue I didn't notice on the previous pages

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -1275,5 +1275,5 @@ table .lg { background-color: #d1cdcd; }
   vertical-align: middle;
   margin-bottom: 5px;
 }
-.customer { padding-top: 50px; }
+.double-padding-to { padding-top: 50px; }
 
