--- a/templates/customers/register.liquid
+++ b/templates/customers/register.liquid
@@ -6,6 +6,7 @@
 </style> 
 
 <main id="register" class="customer">	  
+  <div class="double-padding-to">
   {% if customer %}
     <script type="text/javascript">
       window.location = '/account/'; 
@@ -13,7 +14,7 @@
   {% else %}
     <section class="tac fw">
       <h3 class="">Create an Account</h3>
-      <p class="nmt"><img src="{{'paca-icon.png' | asset_url}}" class="account-icon"/>Already have an account? <a href="/account/login" class="border-bottom-gray">Login here.</a></h3>
+      <p class="nmt"><img src="{{'paca-icon.png' | asset_url}}" class="account-icon"/>Already have an account? <a href="/account/login" class="border-bottom-gray">Login here.</a></p>
     </section>    
     <section class="accent-padding">
       {% form 'create_customer' %}
@@ -28,4 +29,5 @@
     <img src="{{'account-paca.png' | asset_url}}" class="account-paca"/>
 
   {% endif %}
+  </div>
 </main>
