styles the forgot password form to mimic the rest

--- a/templates/customers/login.liquid
+++ b/templates/customers/login.liquid
@@ -29,15 +29,14 @@
     </section>
   </div>
   <div class="recover-password">
-    <section class="tac fw page-header">
-      <h2 class="nmb">Reset Password</h2>
-      <h3 class="nmt">We will send you an email to reset your password</h3>
+    <section class="tac fw">
+      <h3 class="">Reset Password</h3>
+      <p class="tac nmt"><img src="{{'paca-icon.png' | asset_url}}" class="account-icon"/>We will send you an email to reset your password</p>
     </section>    
-    <section>
+    <section class="accent-padding">
       {% form 'recover_customer_password' %}
         {{ form.errors | default_errors }}
-        <h3 class="text-green"><label for="email">Email Address</label></h3>
-        <input type="email" value="" size="30" name="email" class=""> 
+        <input type="email" value="" size="30" name="email" class="" placeholder="Email"> 
         <input type="submit" value="Submit">
         <p class="forgot-password tac"> <span>back to <a href="javascript:void(0)" onclick="hideRecoverPasswordForm()">login</a></span></p>
       {% endform %}
