--- a/templates/customers/activate_account.liquid
+++ b/templates/customers/activate_account.liquid
@@ -1,17 +1,18 @@
 
 <main id="activate" class="customer"> 
-  <section class="tac fw page-header">
-    <h2 class="text-green nmb">Activate Account</h2>
-    <h3 class="nmt">Create your password to activate your account</h3>
-  </section>    
-<section>
-  {% form 'activate_customer_password' %}
-    {{ form.errors | default_errors }}
-    <h3 class="text-green ib"><label for="password">Password</label></h3>
-    <input type="password" value="" name="customer[password]" size="16" class="background-lightgray">
-    <h3 class="text-green ib"><label for="password_confirmation">Confirm </label></h3>
-    <input type="password" value="" name="customer[password_confirmation]" class="background-lightgray">
-    <input type="submit" value="Activate Account">
-  {% endform %}
-</section>  
+  <div class="double-padding-to">
+    <section class="tac fw">
+      <h3 class="">Activate Account</h3>
+      <p class="nmt"><img src="{{'paca-icon.png' | asset_url}}" class="account-icon"/>Create your password to activate your account</p>
+    </section>    
+    <section class="accent-padding">
+      {% form 'activate_customer_password' %}
+        {{ form.errors | default_errors }}
+        <input type="password" value="" name="customer[password]" size="16" placeholder="Password">
+        <input type="password" value="" name="customer[password_confirmation]" placeholder="Confirm Password">
+        <input type="submit" value="Activate Account">
+      {% endform %}
+    </section> 
+        <img src="{{'account-paca.png' | asset_url}}" class="account-paca"/>
+ 
 </main>
