adds the account icon to the desktop nav bar

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -1276,4 +1276,7 @@ table .lg { background-color: #d1cdcd; }
   margin-bottom: 5px;
 }
 .double-padding-to { padding-top: 50px; }
-
+#account-pal {
+    margin-top: -20px;
+    margin-right: 10px;
+}
