styles desktop order history page

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -1280,3 +1280,9 @@ table .lg { background-color: #d1cdcd; }
     margin-top: -20px;
     margin-right: 10px;
 }
+#account ul {
+    list-style: none;
+    padding-left: 0;
+}
+#account .current { border-bottom: 2px solid  #d1cdcd; padding-bottom: 2px; }
+#order-history { border-radius: 20px; }
