--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -32,6 +32,7 @@
         </a>
         <a href="/cart" style="z-index: 999;"><img src="{{'cart.png' | asset_url}}"class="cart-icon" /></a>
     </div>
+    </div>
   </div> 
   <div class="mens desktop-collections" style="display: none;">
     <div class="flex-container-no jcc accent-padding-to">
