--- a/templates/customers/addresses.liquid
+++ b/templates/customers/addresses.liquid
@@ -16,30 +16,20 @@
         </ul>
       </div>
   <div class="two-thirds accent-padding border-lightgray " id="order-history">
-    <h4 class="nmb">Manage Addresses</h4>
+    <h4 class="nmt">Manage Addresses</h4>
     <p class="action-add"><a href="#add" onclick="showAddAddress();">Add New Address</a></p>
     <div id="add-address">
       {% form 'customer_address', customer.new_address %}
-        <h3 class="text-green"><label for="address_first_name_new">First Name</label></h3>
-        <input type="text" id="address_first_name_new" name="address[first_name]" value="{{form.first_name}}" size="40">
-        <h3 class="text-green"><label for="address_last_name_new">Last Name</label></h3>
-        <input type="text" id="address_last_name_new" name="address[last_name]" value="{{form.last_name}}" size="40">
-        <h3 class="text-green"><label for="address_company_new">Company</label></h3>
-        <input type="text" for="address_company_new" name="address[company]" value="{{form.company}}" size="40">
-        <h3 class="text-green"><label for="address_address1_new">Address</label></h3>
-        <input type="text" id="address_address1_new" name="address[address1]" value="{{form.address1}}" size="40">
-        <h3 class="text-green"><label for="address_address2_new">Address Line 2</label></h3>
-        <input type="text" id="address_address2_new" name="address[address2]" value="{{form.address2}}" size="40">
-        <h3 class="text-green"><label for="address_city_new">City</label></h3>
-        <input type="text" id="address_city_new" name="address[city]" value="{{form.city}}" size="40"><br>
-        <h3 class="text-green"><label for="address_country_new">Country</label></h3>
+        <input type="text" id="address_first_name_new" name="address[first_name]" value="{{form.first_name}}" size="40" placeholder="First Name">
+        <input type="text" id="address_last_name_new" name="address[last_name]" value="{{form.last_name}}" size="40" placeholder="Last Name">
+        <input type="text" for="address_company_new" name="address[company]" value="{{form.company}}" size="40" placeholder="Company">
+        <input type="text" id="address_address1_new" name="address[address1]" value="{{form.address1}}" size="40" placeholder="Address">
+        <input type="text" id="address_address2_new" name="address[address2]" value="{{form.address2}}" size="40" placeholder="Address Line 2">
+        <input type="text" id="address_city_new" name="address[city]" value="{{form.city}}" size="40" placeholder="City"><br>
         <select id="address_country_new" name="address[country]" data-default="{{form.country}}">{{ country_option_tags }}</select><br>
-        <div id="address_province_container_new"><h3 class="text-green"><label for="address_province_new" style="margin-top: 15px;">State</label></h3>
-        <select id="address_province_new" name="address[province]" data-default="{{form.province}}"></select></div>
-        <h3 class="text-green"><label for="address_zip_new">Zip</label></h3>
-        <input type="text" id="address_zip_new" class="short" name="address[zip]" value="{{form.zip}}">
-        <h3 class="text-green"><label for="address_phone_new">Phone</label></h3>
-        <input type="text" id="address_phone_new" class="short" name="address[phone]" value="{{form.phone}}">
+        <select id="address_province_new" name="address[province]" data-default="{{form.province}}" placeholder="State / Province"></select></div>
+        <input type="text" id="address_zip_new" class="short" name="address[zip]" value="{{form.zip}}" placeholder="Zip Code">
+        <input type="text" id="address_phone_new" class="short" name="address[phone]" value="{{form.phone}}" placeholder="Phone Number">
         <label for="address_default_address_new" class="checkbox">{{ form.set_as_default_checkbox }} <span>Set as Default Address?</span></label>
         <div class="accent-padding tac">
             <input type="submit" value="Add Address">
