styless edit addresses and fixes a bug that must exist on the Gekks code

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -1240,7 +1240,7 @@ table .lg { background-color: #d1cdcd; }
     margin-top: -150px;
 }
 /* customer account */
-.customer form input[type=email], .customer form input[type=password], .customer form input[type=text]{
+.customer form input[type=email], .customer select, .customer form input[type=password], .customer form input[type=text]{
   width: 100%;
   line-height: 2;
   padding: 10px;
@@ -1250,6 +1250,7 @@ table .lg { background-color: #d1cdcd; }
   margin-bottom: 15px;
   font-size: 10pt;
   box-sizing: border-box;
+  height: 48px;
 }
 .customer form input[type=submit] {
   width: 100%;
@@ -1286,3 +1287,4 @@ table .lg { background-color: #d1cdcd; }
 }
 #account .current, #account-addresses .current { border-bottom: 2px solid  #d1cdcd; padding-bottom: 2px; }
 #order-history { border-radius: 20px; }
+.checkbox { vertical-align: middle; }
