--- a/templates/customers/addresses.liquid
+++ b/templates/customers/addresses.liquid
@@ -4,7 +4,7 @@
     background: white;
   }
 </style> 
-<main id="account-addresses" class="customer">       
+<main id="account-addresses" class="customer">  
 <section class="index-padding flex-container">
    <div class="third accent-padding">
         <h3 class="accent">Your Account</h3>
@@ -27,13 +27,15 @@
         <input type="text" id="address_address2_new" name="address[address2]" value="{{form.address2}}" size="40" placeholder="Address Line 2">
         <input type="text" id="address_city_new" name="address[city]" value="{{form.city}}" size="40" placeholder="City"><br>
         <select id="address_country_new" name="address[country]" data-default="{{form.country}}">{{ country_option_tags }}</select><br>
-        <select id="address_province_new" name="address[province]" data-default="{{form.province}}" placeholder="State / Province"></select></div>
+        <div id="address_province_container_new">
+          <select id="address_province_new" name="address[province]" data-default="{{form.province}}" placeholder="State / Province"></select>
+        </div>
         <input type="text" id="address_zip_new" class="short" name="address[zip]" value="{{form.zip}}" placeholder="Zip Code">
         <input type="text" id="address_phone_new" class="short" name="address[phone]" value="{{form.phone}}" placeholder="Phone Number">
-        <label for="address_default_address_new" class="checkbox">{{ form.set_as_default_checkbox }} <span>Set as Default Address?</span></label>
+          <p class="subscript"><label class="checkbox">{{ form.set_as_default_checkbox }} <span>Set as Default Address?</span></label></p>  
         <div class="accent-padding tac">
             <input type="submit" value="Add Address">
-            <a href="#" onclick="hideAddAddress();" class="back">Back</a>
+            <p><a href="#" onclick="hideAddAddress();" class="back">Back</a></p>
         </div>
       {% endform %}
     </div>
@@ -57,30 +59,22 @@
       </div>
       <div id="edit_address_{{address.id}}" class="customer-address edit-address" style="display: none">
         {% form 'customer_address', address %}
-          <h3 class="text-green"><label for="address_first_name_{{form.id}}">First Name</label></h3>
-          <input type="text" id="address_first_name_{{form.id}}" class="address_form" name="address[first_name]" value="{{form.first_name}}" size="40" placeholder="Your first name">
-          <h3 class="text-green"><label for="address_last_name_{{form.id}}">Last Name</label></h3>
-          <input type="text" id="address_last_name_{{form.id}}" class="address_form" name="address[last_name]" value="{{form.last_name}}" size="40" placeholder="Your last name">
-          <h3 class="text-green"><label for="address_company_{{form.id}}">Company</label></h3>
-          <input type="text" id="address_company_{{form.id}}" class="address_form" name="address[company]" value="{{form.company}}" size="40" placeholder="Your company name">
-          <h3 class="text-green"><label for="address_address1_{{form.id}}">Address</label></h3>
-          <input type="text" id="address_address1_{{form.id}}" class="address_form" name="address[address1]" value="{{form.address1}}" size="40" placeholder="Your address 1">
-          <h3 class="text-green"><label for="address_address2_{{form.id}}">Address Line 2</label></h3>
-          <input type="text" id="address_address2_{{form.id}}" class="address_form" name="address[address2]" value="{{form.address2}}" size="40" placeholder="Your address 2">
-          <h3 class="text-green"><label for="address_city_{{form.id}}">City</label></h3>
-          <input type="text" id="address_city_{{form.id}}" class="address_form" name="address[city]" value="{{form.city}}" size="40" placeholder="Your city">
-          <h3 class="text-green"><label for="address_country_{{form.id}}">Country</label></h3>
+          <input type="text" id="address_first_name_{{form.id}}" class="address_form" name="address[first_name]" value="{{form.first_name}}" size="40" placeholder="First Name">
+          <input type="text" id="address_last_name_{{form.id}}" class="address_form" name="address[last_name]" value="{{form.last_name}}" size="40" placeholder="Last Name">
+          <input type="text" id="address_company_{{form.id}}" class="address_form" name="address[company]" value="{{form.company}}" size="40" placeholder="Company Name">
+          <input type="text" id="address_address1_{{form.id}}" class="address_form" name="address[address1]" value="{{form.address1}}" size="40" placeholder="Address">
+          <input type="text" id="address_address2_{{form.id}}" class="address_form" name="address[address2]" value="{{form.address2}}" size="40" placeholder="Address Line 2">
+          <input type="text" id="address_city_{{form.id}}" class="address_form" name="address[city]" value="{{form.city}}" size="40" placeholder="City">
           <select id="address_country_{{form.id}}" name="address[country]" data-default="{{form.country}}">{{ country_option_tags }}</select>
-          <h3 class="text-green"><label for="address_province_{{form.id}}" style="margin-top: 15px;">State</label></h3>
-          <select id="address_province_{{form.id}}" class="address_form" name="address[province]" data-default="{{form.province}}"></select>
-          <h3 class="text-green"><label for="address_zip_{{form.id}}">Zip</label></h3>
-          <input type="text" id="address_zip_{{form.id}}" class="address_form" name="address[zip]" value="{{form.zip}}" size="40" placeholder="Your zip">
-          <h3 class="text-green"><label for="address_phone_{{form.id}}">Phone</label></h3>
-          <input type="text" id="address_phone_{{form.id}}" class="address_form" name="address[phone]" value="{{form.phone}}" size="40" placeholder="Your phone">
-          <p><label class="checkbox">{{ form.set_as_default_checkbox }} <span>Set as Default Address?</span></label></p>  
+          <div id="address_province_container_{{address.id}}">
+            <select id="address_province_{{form.id}}" name="address[province]" data-default="{{form.province}}" placeholder="State / Province"></select>
+          </div>
+          <input type="text" id="address_zip_{{form.id}}" class="address_form" name="address[zip]" value="{{form.zip}}" size="40" placeholder="Zip Code">
+          <input type="text" id="address_phone_{{form.id}}" class="address_form" name="address[phone]" value="{{form.phone}}" size="40" placeholder="Phone Number">
+          <p class="subscript"><label class="checkbox">{{ form.set_as_default_checkbox }} <span>Set as Default Address?</span></label></p>  
           <div class="accent-padding tac">
             <input type="submit" value="Update Address">
-            <a href="javascript:void(0)" onclick="Shopify.CustomerAddress.toggleForm({{form.id}}); return false;" class="back">Back</a>
+            <p><a href="javascript:void(0)" onclick="Shopify.CustomerAddress.toggleForm({{form.id}}); return false;" class="back">Back</a></p>
           </div>       
         {% endform %}
       </div>
